2nd training/Community/Community/Community1/force-app/main/default/objects/Record_Type_Counter__c/Record_Type_Counter__c.object-meta.xml
<CustomObject>
    <description>Auto-Counter for different record types</description>
    <label>Record Type Counter</label>
    <nameField>
        <label>Record Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Type Counters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>