2nd training/Community/Community/Community1/force-app/main/default/objects/Record_Type_Counter__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Record Type</description>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>