2nd training/Community/Community/Community1/force-app/main/default/objects/Record_Type_Counter__c/fields/Initial_Counter__c.field-meta.xml
<CustomField>
    <fullName>Initial_Counter__c</fullName>
    <label>Initial Counter</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>