2nd training/Community/Community/Community1/force-app/main/default/objects/Record_Type_Counter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Count__c</columns>
    <columns>Description__c</columns>
    <columns>Initial_Counter__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Frequency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>